--- a/popup/popup.css
+++ b/popup/popup.css
@@ -22,6 +22,7 @@
 }
 
 body {
+  width: 330px;
   margin: 0px;
   padding: 10px;
   background-color: var(--dark-blue);
@@ -35,231 +36,6 @@ header {
   font-style: italic;
 }
 
-.glitch {
-  margin: 15px 0px;
-  color: var(--white);
-  position: relative;
-  font-size: 1.4rem;
-  animation: glitch 8s 8s infinite;
-}
-
-.glitch::before {
-  content: attr(data-text);
-  position: absolute;
-  top: -5px;
-  text-shadow: -5px 0 magenta;
-  background: black;
-  overflow: hidden;
-  top: 0;
-  animation: noise-1 3s linear infinite alternate-reverse, glitch 20s 20s infinite;
-}
-
-.glitch::after {
-  content: attr(data-text);
-  position: absolute;
-  left: 50px;
-  text-shadow: -5px 0 lightgreen;
-  background: black;
-  overflow: hidden;
-  top: 0;
-  animation: noise-2 3s linear infinite alternate-reverse, glitch 20s 20s infinite;
-}
-
-@keyframes glitch {
-  1% {
-    transform: rotateX(10deg) skewX(90deg);
-  }
-  2% {
-    transform: rotateX(0deg) skewX(0deg);
-  }
-}
-@keyframes noise-1 {
-  3.3333333333% {
-    clip-path: inset(100px 0 1px 0);
-  }
-  6.6666666667% {
-    clip-path: inset(43px 0 13px 0);
-  }
-  10% {
-    clip-path: inset(2px 0 35px 0);
-  }
-  13.3333333333% {
-    clip-path: inset(66px 0 40px 0);
-  }
-  16.6666666667% {
-    clip-path: inset(9px 0 93px 0);
-  }
-  20% {
-    clip-path: inset(60px 0 14px 0);
-  }
-  23.3333333333% {
-    clip-path: inset(71px 0 29px 0);
-  }
-  26.6666666667% {
-    clip-path: inset(98px 0 5px 0);
-  }
-  30% {
-    clip-path: inset(33px 0 49px 0);
-  }
-  33.3333333333% {
-    clip-path: inset(83px 0 23px 0);
-  }
-  36.6666666667% {
-    clip-path: inset(6px 0 99px 0);
-  }
-  40% {
-    clip-path: inset(40px 0 62px 0);
-  }
-  43.3333333333% {
-    clip-path: inset(51px 0 1px 0);
-  }
-  46.6666666667% {
-    clip-path: inset(2px 0 72px 0);
-  }
-  50% {
-    clip-path: inset(40px 0 61px 0);
-  }
-  53.3333333333% {
-    clip-path: inset(69px 0 37px 0);
-  }
-  56.6666666667% {
-    clip-path: inset(4px 0 75px 0);
-  }
-  60% {
-    clip-path: inset(84px 0 5px 0);
-  }
-  63.3333333333% {
-    clip-path: inset(93px 0 13px 0);
-  }
-  66.6666666667% {
-    clip-path: inset(46px 0 10px 0);
-  }
-  70% {
-    clip-path: inset(18px 0 39px 0);
-  }
-  73.3333333333% {
-    clip-path: inset(79px 0 27px 0);
-  }
-  76.6666666667% {
-    clip-path: inset(27px 0 19px 0);
-  }
-  80% {
-    clip-path: inset(91px 0 14px 0);
-  }
-  83.3333333333% {
-    clip-path: inset(33px 0 59px 0);
-  }
-  86.6666666667% {
-    clip-path: inset(94px 0 8px 0);
-  }
-  90% {
-    clip-path: inset(54px 0 19px 0);
-  }
-  93.3333333333% {
-    clip-path: inset(44px 0 14px 0);
-  }
-  96.6666666667% {
-    clip-path: inset(18px 0 4px 0);
-  }
-  100% {
-    clip-path: inset(96px 0 10px 0);
-  }
-}
-@keyframes noise-2 {
-  0% {
-    clip-path: inset(67px 0 59px 0);
-  }
-  3.3333333333% {
-    clip-path: inset(158px 0 3px 0);
-  }
-  6.6666666667% {
-    clip-path: inset(106px 0 45px 0);
-  }
-  10% {
-    clip-path: inset(49px 0 62px 0);
-  }
-  13.3333333333% {
-    clip-path: inset(101px 0 56px 0);
-  }
-  16.6666666667% {
-    clip-path: inset(110px 0 10px 0);
-  }
-  20% {
-    clip-path: inset(188px 0 4px 0);
-  }
-  23.3333333333% {
-    clip-path: inset(53px 0 147px 0);
-  }
-  26.6666666667% {
-    clip-path: inset(56px 0 94px 0);
-  }
-  30% {
-    clip-path: inset(141px 0 19px 0);
-  }
-  33.3333333333% {
-    clip-path: inset(113px 0 29px 0);
-  }
-  36.6666666667% {
-    clip-path: inset(18px 0 12px 0);
-  }
-  40% {
-    clip-path: inset(189px 0 2px 0);
-  }
-  43.3333333333% {
-    clip-path: inset(33px 0 54px 0);
-  }
-  46.6666666667% {
-    clip-path: inset(111px 0 82px 0);
-  }
-  50% {
-    clip-path: inset(126px 0 71px 0);
-  }
-  53.3333333333% {
-    clip-path: inset(80px 0 57px 0);
-  }
-  56.6666666667% {
-    clip-path: inset(76px 0 28px 0);
-  }
-  60% {
-    clip-path: inset(35px 0 63px 0);
-  }
-  63.3333333333% {
-    clip-path: inset(23px 0 115px 0);
-  }
-  66.6666666667% {
-    clip-path: inset(69px 0 31px 0);
-  }
-  70% {
-    clip-path: inset(174px 0 21px 0);
-  }
-  73.3333333333% {
-    clip-path: inset(136px 0 22px 0);
-  }
-  76.6666666667% {
-    clip-path: inset(155px 0 32px 0);
-  }
-  80% {
-    clip-path: inset(28px 0 93px 0);
-  }
-  83.3333333333% {
-    clip-path: inset(144px 0 51px 0);
-  }
-  86.6666666667% {
-    clip-path: inset(153px 0 22px 0);
-  }
-  90% {
-    clip-path: inset(85px 0 82px 0);
-  }
-  93.3333333333% {
-    clip-path: inset(174px 0 18px 0);
-  }
-  96.6666666667% {
-    clip-path: inset(46px 0 113px 0);
-  }
-  100% {
-    clip-path: inset(61px 0 70px 0);
-  }
-}
 hr {
   height: 8px;
   border: 0;
@@ -288,10 +64,10 @@ input {
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 90px;
+  width: 70px;
   height: 25px;
   margin: 0px 10px 0px 0px;
-  padding: 14px;
+  padding: 8px;
   border: 1px solid var(--yellow);
   background-color: var(--dark-blue);
   color: var(--white);
@@ -303,22 +79,248 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 70px;
   height: 25px;
   margin: 0px 10px;
-  padding: 14px;
-  border: 1px solid var(--white);
+  padding: 8px;
+  border: none;
   background-color: var(--yellow);
   color: var(--black);
   font-weight: bold;
   text-transform: uppercase;
   cursor: pointer;
-  clip-path: polygon(92% 0, 100% 25%, 100% 100%, 8% 100%, 0% 75%, 0 0);
+  clip-path: polygon(90% 0, 100% 25%, 100% 100%, 10% 100%, 0% 75%, 0 0);
 }
 
 button:hover {
   background-color: var(--dark-yellow);
 }
 
+.glitch {
+  margin: 15px 0px;
+  color: var(--white);
+  position: relative;
+  font-size: 1.6rem;
+  animation: glitch 5s 5s infinite;
+}
+
+.glitch::before {
+  content: attr(data-text);
+  position: absolute;
+  top: -50px;
+  text-shadow: -5px 0 magenta;
+  background: black;
+  overflow: hidden;
+  top: 0;
+  animation: noise-1 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
+}
+
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  left: 20px;
+  text-shadow: -5px 0 lightgreen;
+  background: black;
+  overflow: hidden;
+  top: 0;
+  animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
+}
+
+@keyframes glitch {
+  1% {
+    transform: rotateX(10deg) skewX(90deg);
+  }
+  2% {
+    transform: rotateX(0deg) skewX(0deg);
+  }
+}
+@keyframes noise-1 {
+  3.3333333333% {
+    clip-path: inset(87px 0 26px 0);
+  }
+  6.6666666667% {
+    clip-path: inset(3px 0 99px 0);
+  }
+  10% {
+    clip-path: inset(25px 0 28px 0);
+  }
+  13.3333333333% {
+    clip-path: inset(18px 0 24px 0);
+  }
+  16.6666666667% {
+    clip-path: inset(95px 0 22px 0);
+  }
+  20% {
+    clip-path: inset(25px 0 90px 0);
+  }
+  23.3333333333% {
+    clip-path: inset(60px 0 42px 0);
+  }
+  26.6666666667% {
+    clip-path: inset(104px 0 9px 0);
+  }
+  30% {
+    clip-path: inset(83px 0 14px 0);
+  }
+  33.3333333333% {
+    clip-path: inset(13px 0 50px 0);
+  }
+  36.6666666667% {
+    clip-path: inset(115px 0 1px 0);
+  }
+  40% {
+    clip-path: inset(41px 0 7px 0);
+  }
+  43.3333333333% {
+    clip-path: inset(60px 0 28px 0);
+  }
+  46.6666666667% {
+    clip-path: inset(11px 0 60px 0);
+  }
+  50% {
+    clip-path: inset(89px 0 11px 0);
+  }
+  53.3333333333% {
+    clip-path: inset(15px 0 80px 0);
+  }
+  56.6666666667% {
+    clip-path: inset(58px 0 36px 0);
+  }
+  60% {
+    clip-path: inset(36px 0 24px 0);
+  }
+  63.3333333333% {
+    clip-path: inset(52px 0 6px 0);
+  }
+  66.6666666667% {
+    clip-path: inset(58px 0 46px 0);
+  }
+  70% {
+    clip-path: inset(105px 0 1px 0);
+  }
+  73.3333333333% {
+    clip-path: inset(26px 0 81px 0);
+  }
+  76.6666666667% {
+    clip-path: inset(65px 0 34px 0);
+  }
+  80% {
+    clip-path: inset(86px 0 29px 0);
+  }
+  83.3333333333% {
+    clip-path: inset(73px 0 45px 0);
+  }
+  86.6666666667% {
+    clip-path: inset(29px 0 77px 0);
+  }
+  90% {
+    clip-path: inset(80px 0 12px 0);
+  }
+  93.3333333333% {
+    clip-path: inset(66px 0 52px 0);
+  }
+  96.6666666667% {
+    clip-path: inset(92px 0 12px 0);
+  }
+  100% {
+    clip-path: inset(97px 0 12px 0);
+  }
+}
+@keyframes noise-2 {
+  0% {
+    clip-path: inset(107px 0 3px 0);
+  }
+  3.3333333333% {
+    clip-path: inset(96px 0 3px 0);
+  }
+  6.6666666667% {
+    clip-path: inset(47px 0 5px 0);
+  }
+  10% {
+    clip-path: inset(16px 0 63px 0);
+  }
+  13.3333333333% {
+    clip-path: inset(110px 0 2px 0);
+  }
+  16.6666666667% {
+    clip-path: inset(10px 0 90px 0);
+  }
+  20% {
+    clip-path: inset(75px 0 23px 0);
+  }
+  23.3333333333% {
+    clip-path: inset(57px 0 41px 0);
+  }
+  26.6666666667% {
+    clip-path: inset(51px 0 51px 0);
+  }
+  30% {
+    clip-path: inset(16px 0 64px 0);
+  }
+  33.3333333333% {
+    clip-path: inset(113px 0 5px 0);
+  }
+  36.6666666667% {
+    clip-path: inset(84px 0 25px 0);
+  }
+  40% {
+    clip-path: inset(70px 0 11px 0);
+  }
+  43.3333333333% {
+    clip-path: inset(47px 0 26px 0);
+  }
+  46.6666666667% {
+    clip-path: inset(76px 0 11px 0);
+  }
+  50% {
+    clip-path: inset(34px 0 54px 0);
+  }
+  53.3333333333% {
+    clip-path: inset(109px 0 10px 0);
+  }
+  56.6666666667% {
+    clip-path: inset(29px 0 77px 0);
+  }
+  60% {
+    clip-path: inset(17px 0 7px 0);
+  }
+  63.3333333333% {
+    clip-path: inset(104px 0 9px 0);
+  }
+  66.6666666667% {
+    clip-path: inset(16px 0 2px 0);
+  }
+  70% {
+    clip-path: inset(66px 0 27px 0);
+  }
+  73.3333333333% {
+    clip-path: inset(61px 0 56px 0);
+  }
+  76.6666666667% {
+    clip-path: inset(15px 0 53px 0);
+  }
+  80% {
+    clip-path: inset(105px 0 5px 0);
+  }
+  83.3333333333% {
+    clip-path: inset(30px 0 6px 0);
+  }
+  86.6666666667% {
+    clip-path: inset(93px 0 6px 0);
+  }
+  90% {
+    clip-path: inset(114px 0 3px 0);
+  }
+  93.3333333333% {
+    clip-path: inset(39px 0 23px 0);
+  }
+  96.6666666667% {
+    clip-path: inset(34px 0 36px 0);
+  }
+  100% {
+    clip-path: inset(100px 0 9px 0);
+  }
+}
 .container {
   margin: 20px 5px;
   padding: 12px;
@@ -328,6 +330,7 @@ button:hover {
 
 .container-title {
   font-size: 1rem;
+  letter-spacing: 3px;
   text-align: center;
   margin: 10px 0px;
   color: var(--red);
@@ -338,14 +341,22 @@ button:hover {
   align-items: center;
 }
 
+#utility-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 [contenteditable]:focus {
   border-bottom: 1px solid black;
   padding: 5px;
 }
 
 .name {
+  margin: 10px 10px 10px 0px;
   color: var(--white);
-  letter-spacing: 2px;
+  letter-spacing: 3px;
 }
 
 #friends-container {
@@ -355,6 +366,8 @@ button:hover {
 #add-user-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .name-container {
@@ -373,12 +386,27 @@ button:hover {
 
 #footer-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
 }
 
 #delete-data-btn {
   margin: 10px;
+}
+
+#add-friend-btn {
+  margin-top: 20px;
+  width: 120px;
+}
+
+#new-friend-name,
+#new-friend-id {
+  margin: 0px 10px;
+}
+
+#delete-data-btn,
+#switch-theme-btn {
+  width: 120px;
+  padding: 15px;
 }
 
 /*# sourceMappingURL=popup.css.map */
